tests/_resources/error_gcns/E005_missing_lhs.gcn
# Error: Missing left-hand side of equation
block FIRM
{
    identities
    {
        = C[] + I[];
    };
};
